Document PPDG/src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Board_Level_Committee_Approval__c</fullName>
        <label>Board Level Committee  Approval</label>
        <picklist>
            <picklistValues>
                <fullName>BRCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REMCOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharia Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excom</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Management_Committee_Approval__c</fullName>
        <label>Management Committee Approval</label>
        <picklist>
            <picklistValues>
                <fullName>ORC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transformation Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALCO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Review_Date__c</fullName>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Owner__c</fullName>
        <label>Policy Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Sultan Choudhury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laura Blake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aamir Shakur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keith Leach</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>